Moved classes to public / private folder structure. Started working on re-working ability system to use components instead of actor classes.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,5 +2,5 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=7FF72130446184F60077B8937DE3A2E5
 ProjectName=Outlanders
-
+CopyrightNotice=Copyright LP Creative Ventures LLC.
 
